feat(folders): add folder search endpoint and batch permission filtering to eliminate N+1 queries